<resources>
    <string name="app_name">PEP 2.0</string>

    <!-- BEGIN: LoginActivity-->
    <string name="username">Naam</string>
    <string name="password">Wachtwoord</string>
    <string name="loginButton">Inloggen</string>
    <string name="guestButton">Doorgaan zonder inloggen</string>
    <!-- END: LoginActivity-->

    <!-- BEGIN: MainActivity-->
    <string name="button_scanner">Kleurenscanner</string>
    <string name="button_passport">Paspoort</string>
    <string name="button_settings">Instellingen</string>
    <string name="button_overig">(Community)</string>
    <!-- END: MainActivity-->

    <!-- BEGIN: PassportActivity-->
    <string name="button_stijl">Stijl</string>
    <string name="button_kleurenPalet">Kleuren palet</string>
    <!-- END: PassportActivity-->

    <!-- BEGIN: ScannerActivity-->
    <!--<string name="btnIntend">Take (big) Picture</string>-->
    <!--<string name="btnIntendS">Take (small) Picture</string>-->
    <!--<string name="btnIntendV">Take Video</string>-->
    <!--<string name="cannot">Cannot</string>-->
    <!--<string name="album_name">CameraSample</string>-->
    <!-- END: ScannerActivity-->
</resources>
