<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.MainActivity"
    android:weightSum="1">

    <Button
        android:id="@+id/scanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_scanner"
        android:text="@string/button_scanner"
        android:textSize="20sp"
        android:onClick="buttonClick"
        android:layout_weight="0.33" />
    <Button
        android:id="@+id/passport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_passport"
        android:text="@string/button_passport"
        android:textSize="20sp"
        android:onClick="buttonClick"
        android:layout_weight="0.33" />
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_settings"
        android:text="@string/button_settings"
        android:textSize="20sp"
        android:onClick="buttonClick"
        android:layout_weight="0.33" />

</LinearLayout>
