<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/panelColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/navBarColor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/loginUsernameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/loginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginUsernameTitle"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:inputType="text"
                    android:hint="@string/username"/>

                <TextView
                    android:id="@+id/loginPasswordTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginUsername"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginPasswordTitle"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginPassword"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/loginButton"/>

                <Button
                    android:id="@+id/guestLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginButton"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/guestButton"/>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
